superapp/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: superapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
