superapp/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superapp-ing
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: 'k8s.weslyg.ru'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: backend
                port:
                  number: 80
